--- a/index-login.html
+++ b/index-login.html
@@ -5,16 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Gerador de senhas, gerador password">
-    <link class="icone" rel="shortcut icon" href="/icon/icone.ico" type="image/x-icon">
+    <link class="icone" rel="shortcut icon" href="icone.ico" type="image/x-icon">
     <title>LOGIN</title>
-    <link rel="stylesheet" href="/css/styles-login.css">
+    <link rel="stylesheet" href="styles-login.css">
     <!--<a href="https://storyset.com/user">User illustrations by Storyset</a>-->
   </head>
   <body>
     <div class="main-login">
       <div class="left-login">
         <h1>Bem-Vindo a nossa plataforma<br>Faça parte do nosso time!</h1>
-        <img class="animated" src="/img/img.svg" alt="animação">
+        <img class="animated" src="img.svg" alt="animação">
       </div>
       <div class="right-login">
         <button class="cadastrar">Cadastrar</button>
