--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="Gerador de senhas, gerador password">
     <link class="icone" rel="shortcut icon" href="icone.ico" type="image/x-icon">
     <title>LOGIN</title>
-    <link rel="stylesheet" href="styles-login.css">
+    <link rel="stylesheet" href="style.css">
     <!--<a href="https://storyset.com/user">User illustrations by Storyset</a>-->
   </head>
   <body>
